2022-03-10  Chris Fleizach  <cfleizach@apple.com>

        AX: Support updated WebSpeech API
        https://bugs.webkit.org/show_bug.cgi?id=237614
        <rdar://problem/89981851>

        Reviewed by Andres Gonzalez.

        * web-platform-tests/speech-api/SpeechSynthesisErrorEvent-constructor-expected.txt:
        * web-platform-tests/speech-api/SpeechSynthesisEvent-constructor-expected.txt:
        * web-platform-tests/speech-api/idlharness.window-expected.txt:

2022-03-10  Antoine Quint  <graouts@webkit.org>

        [web-animations] grid-template-areas should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237712

        Reviewed by Antti Koivisto.

        While we now run the grid-template-areas tests, we have a bug in the way we serialize the value through the
        computed style.

        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt:

2022-03-10  Antoine Quint  <graouts@webkit.org>

        [web-animations] font-variant-caps should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237662

        Reviewed by Myles C. Maxfield.

        * web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
        * web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-in-animation-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt:
