@@ -1,3 +1,13 @@
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
+        [web-animations] quotes should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237721
+
+        Reviewed by Antti Koivisto.
+
+        * animation/CSSPropertyAnimation.cpp:
+        (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
+
 2022-03-10  Chris Dumez  <cdumez@apple.com>
 
         Document is leaking on haaretz.co.il due to an async script
