@@ -1,3 +1,14 @@
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
+        [web-animations] quotes should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237721
+
+        Reviewed by Antti Koivisto.
+
+        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:
+
 2022-03-10  Chris Fleizach  <cfleizach@apple.com>
 
         AX: Support updated WebSpeech API
